objects/ASI_CRM_CN_Channel_Strategy__c.object
<CustomObject>
    <description>ASI_CRM_CN_Channel_Strategy</description>
    <fields>
        <fullName>ASI_CRM_CN_Area_Eng_Name__c</fullName>
        <formula>ASI_CRM_CN_Area__r.ASI_CRM_English_Name__c</formula>
        <label>Area Eng Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area</label>
        <referenceTo>ASI_CRM_CN_Area__c</referenceTo>
        <relationshipLabel>Channel Strategies</relationshipLabel>
        <relationshipName>Channel_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_CS_National_Strategy_1__c</fullName>
        <formula>ASI_CRM_CN_National__r.ASI_CRM_CN_CS_Strategy_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Strategy 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_CS_National_Strategy_2__c</fullName>
        <formula>ASI_CRM_CN_National__r.ASI_CRM_CN_CS_Strategy_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Strategy 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_CS_National_Strategy_3__c</fullName>
        <formula>ASI_CRM_CN_National__r.ASI_CRM_CN_CS_Strategy_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Strategy 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_CS_Strategy_1__c</fullName>
        <description>Channel Strategy Strategy 1</description>
        <label>Strategy 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_CS_Strategy_2__c</fullName>
        <description>Channel Strategy</description>
        <label>Strategy 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_CS_Strategy_3__c</fullName>
        <description>Channel Strategy</description>
        <label>Strategy 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_FY_End_Date__c</fullName>
        <formula>DATE(VALUE(RIGHT(TEXT( ASI_CRM_CN_Fiscal_Year__c ),4)), 6, 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_FY_Start_Date__c</fullName>
        <formula>DATE(VALUE(LEFT(TEXT( ASI_CRM_CN_Fiscal_Year__c ),4)), 7, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013/2014</fullName>
                </value>
                <value>
                    <fullName>2014/2015</fullName>
                </value>
                <value>
                    <fullName>2015/2016</fullName>
                </value>
                <value>
                    <fullName>2016/2017</fullName>
                </value>
                <value>
                    <fullName>2017/2018</fullName>
                </value>
                <value>
                    <fullName>2018/2019</fullName>
                </value>
                <value>
                    <fullName>2019/2020</fullName>
                </value>
                <value>
                    <fullName>2020/2021</fullName>
                </value>
                <value>
                    <fullName>2021/2022</fullName>
                </value>
                <value>
                    <fullName>2022/2023</fullName>
                </value>
                <value>
                    <fullName>2023/2024</fullName>
                </value>
                <value>
                    <fullName>2024/2025</fullName>
                </value>
                <value>
                    <fullName>2025/2026</fullName>
                </value>
                <value>
                    <fullName>2026/2027</fullName>
                </value>
                <value>
                    <fullName>2027/2028</fullName>
                </value>
                <value>
                    <fullName>2028/2029</fullName>
                </value>
                <value>
                    <fullName>2029/2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Image__c</fullName>
        <label>Image/Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Iconic</fullName>
                </value>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_MS_National_Strategy_1__c</fullName>
        <formula>ASI_CRM_CN_National__r.ASI_CRM_CN_MS_Strategy_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Strategy 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_MS_National_Strategy_2__c</fullName>
        <formula>ASI_CRM_CN_National__r.ASI_CRM_CN_MS_Strategy_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Strategy 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_MS_National_Strategy_3__c</fullName>
        <formula>ASI_CRM_CN_National__r.ASI_CRM_CN_MS_Strategy_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Strategy 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_MS_Strategy_1__c</fullName>
        <description>Merchandizing Strategy</description>
        <label>Strategy 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_MS_Strategy_2__c</fullName>
        <description>Merchandizing Strategy</description>
        <label>Strategy 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_MS_Strategy_3__c</fullName>
        <label>Strategy 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_National__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Strategy</label>
        <referenceTo>ASI_CRM_CN_Channel_Strategy__c</referenceTo>
        <relationshipLabel>Channel Strategies</relationshipLabel>
        <relationshipName>Channel_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Strategy_Type__c</fullName>
        <label>Strategy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Area Strategy</fullName>
                </value>
                <value>
                    <fullName>National Strategy</fullName>
                    <default>true</default>
                    <label>National Strategy</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sub_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Channel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN National, CN Area</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_Channel__c.ASI_CRM_CN_Not_in_use__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_Channel__c</referenceTo>
        <relationshipLabel>Channel Strategies</relationshipLabel>
        <relationshipName>Channel_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Submitters_Email__c</fullName>
        <label>Submitter&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Channel_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Channel Strategy</label>
    <listViews>
        <fullName>ASI_CRM_CN_All_Channel_Strategies</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_National__c</columns>
        <columns>ASI_CRM_CN_Area__c</columns>
        <columns>ASI_CRM_CN_Fiscal_Year__c</columns>
        <columns>ASI_CRM_CN_Strategy_Type__c</columns>
        <columns>ASI_CRM_CN_FY_Start_Date__c</columns>
        <columns>ASI_CRM_CN_FY_End_Date__c</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Channel Strategies</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_NTMK</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_All_Channel_Strategies_Area</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_CN_Strategy_Type__c</columns>
        <columns>ASI_CRM_CN_Fiscal_Year__c</columns>
        <columns>ASI_CRM_CN_Area__c</columns>
        <columns>ASI_CRM_CN_Sub_Channel__c</columns>
        <columns>ASI_CRM_CN_Image__c</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel_Strategy__c.ASI_CRM_CN_Area</value>
        </filters>
        <label>All Channel Strategies (Area)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_NTMK</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_All_Channel_Strategy_National</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Strategy_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_CN_Fiscal_Year__c</columns>
        <columns>ASI_CRM_CN_Area__c</columns>
        <columns>ASI_CRM_CN_Sub_Channel__c</columns>
        <columns>ASI_CRM_CN_Image__c</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel_Strategy__c.ASI_CRM_CN_National</value>
        </filters>
        <label>All Channel Strategy (National)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_NTMK</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Channel_Strategies_Area_SH</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_CN_Strategy_Type__c</columns>
        <columns>ASI_CRM_CN_Fiscal_Year__c</columns>
        <columns>ASI_CRM_CN_Area__c</columns>
        <columns>ASI_CRM_CN_Sub_Channel__c</columns>
        <columns>ASI_CRM_CN_Image__c</columns>
        <columns>ASI_CRM_CN_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel_Strategy__c.ASI_CRM_CN_Area</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Area__c</field>
            <operation>equals</operation>
            <value>上海</value>
        </filters>
        <label>Channel Strategies (Area) - 上海</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_RTMK_GC</group>
            <role>ASI_CN_Regional_VP_Greater_Central_China</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CS{0000000}</displayFormat>
        <label>Strategy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Strategies</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Area</fullName>
        <active>true</active>
        <label>CN Area</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_National</fullName>
        <active>true</active>
        <label>CN National</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>